--- a/game_flix/WebContent/css/index.css
+++ b/game_flix/WebContent/css/index.css
@@ -1,5 +1,5 @@
 body{
-  background:url('/images/Monte\ Carlo.jpg');
+  background:url('../images/MonteCarlo.jpg');
   margin: 0px;
   
 
@@ -145,7 +145,7 @@ footer {
   width: 100%;
   height: 135px;
   color: blanchedalmond;
-  background:url('/images/footer.jpg');
+  background:url('../images/footer.jpg');
   position: absolute;
   bottom: 0px;
   border-radius: 300px 300px 0px 0px;
